# lshop

./: README.md  todo.md
backend/: .gitignore  Cargo.toml  config.toml  todo.md
backend/migrations/: 20251222133700_initial.sql
backend/src/: admin.rs  app.rs  auth.rs  config.rs  db.rs  main.rs  state.rs  util.rs
backend/src/handler/: auth.rs  item.rs  mod.rs  organize.rs  section.rs  store.rs
backend/src/store/: item.rs  mod.rs  section.rs  shop.rs  table.rs  user.rs
frontend/: eslint.config.js  index.html  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: api.ts  app.tsx  index.css  index.tsx  routes.ts
frontend/src/components/: add-store.tsx  delete-dialog.tsx  edit-store.tsx  modify-dialog.tsx  navbar.tsx
frontend/src/components/items/: add-item.tsx  item-checker.tsx  sortable-item.tsx
frontend/src/components/store/: add-section.tsx  add-store.tsx  delete-section.tsx  delete-store.tsx  edit-section.tsx  edit-store.tsx  loading.tsx  store-item.tsx
frontend/src/components/toast/: error-toast.tsx
frontend/src/data/: items.ts  stores.ts
frontend/src/pages/: about.tsx  home.tsx  login.tsx  stores.tsx
frontend/src/providers/: auth.tsx  query-client.tsx
