[package]
name = "lshop-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4" }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "json",
    "env-filter",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15", features = ["toml"] }
anyhow = "1"
time = { version = "0.3", features = ["serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "derive",
    "migrate",
    "time",
] }
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", features = ["password"] }
password-hash = { version = "0.5", features = ["std"] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
base64 = "0.22"
sha2 = "0.10"
async-openai = { version = "0.32", features = ["responses"] }
